# scoring_api

./: .gitignore  Makefile  README.md  pyproject.toml
src/scoring_api/: api.py  scoring.py  store.py  utils.py
tests/: conftest.py  test.py
tests/test_integration/: test_store.py
tests/test_scoring/: test_api.py  test_scoring.py  test_store.py
