[project]
name = "scoring-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "scoring_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
